Fix attachment mimetype detection

We want to resolve the mimetype from the content only if
QMimeType doesn't now the mimetype or the mimetype is not
valid. This matches the behavior of KMimeType (and this
code) in KDE4.

BUG: 407871
FIXED-IN: 5.16